[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.6", features = ["napi4"]}
napi-derive = "2.16.5"
rdev = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
napi-build = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[profile.release]
lto = true
